Publish appimage to github release

--- a/.github/workflows/stable-linux.yml
+++ b/.github/workflows/stable-linux.yml
@@ -196,6 +196,9 @@ jobs:
     steps:
       - name: Build appimage
         run: ./build/linux/appimage/build.sh
+      - name: Publish appimage
+        run: |
+          ./build/linux/appimage/appimage-release.sh
 
   aur:
     needs:
