--- a/.github/workflows/stable-linux.yml
+++ b/.github/workflows/stable-linux.yml
@@ -195,6 +195,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build appimage
+        env:
+	  VSCODE_ARCH: 'x64'
         run: ./build/linux/appimage/build.sh
       - name: Publish appimage
         run: |
