--- a/.github/workflows/stable-linux.yml
+++ b/.github/workflows/stable-linux.yml
@@ -190,13 +190,16 @@ jobs:
       matrix:
         platform:
         - amd64
+        include:
+          - platform: amd_64
+            vscode_arch: x64
     if: needs.build.outputs.SHOULD_DEPLOY == 'yes'
 
     steps:
       - uses: actions/checkout@v3
       - name: Build appimage
         env:
-          VSCODE_ARCH: 'x64'
+          VSCODE_ARCH: ${{ matrix.vscode_arch }}
         run: ./build/linux/appimage/build.sh
       - name: Publish appimage
         run: |
