--- a/.github/workflows/stable-linux.yml
+++ b/.github/workflows/stable-linux.yml
@@ -167,6 +167,13 @@ jobs:
         run: ./prepare_assets.sh
         if: env.SHOULD_BUILD == 'yes' && (env.SHOULD_DEPLOY == 'yes' || github.event.inputs.test_asset_builder == 'true')
 
+      - name: Upload DEB package as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: deb-package-{{ matrix.vscode_arch }}
+          path: assets/*deb
+          retention-days: 5
+
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -197,6 +204,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Download DEB package artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: deb-package-{{ matrix.vscode_arch }}
       - name: Build appimage
         env:
           VSCODE_ARCH: ${{ matrix.vscode_arch }}
